--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> VCS Test</title>
 </head>
 <body>
-<h1>My version control Test</h1>
+<h1>My version control System</h1>
 <h1>Added content from gitHub</h1>
 </body>
 </html>
